[package]
name = "boar"
edition = "2021"
version = "0.1.0"
repository = "https://github.com/egxn/boar"
license = "MIT"

[dependencies]
local-ip-address = "0.4.4"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
qrcodegen = "1.8.0"
urlencoding = "2.1.0"
arboard = "2.1.1"
async-process = "1.4.0"
rdev = "0.5.1"