[package]
name = "boar"
edition = "2021"
version = "0.6.2"
repository = "https://github.com/egxn/boar"
license = "MIT"

[dependencies]
arboard = "2.1.1"
futures = "0.3"
gtk = "0.15.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.8.1"
image = "0.24.4"
libappindicator = "0.7.1"
local-ip-address = "0.4.4"
qrcodegen = "1.8.0"
rand = "0.8.4"
rdev = "0.5.1"
rust-embed="6.4.1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.0"
